external-crates/move/crates/move-compiler/tests/move_check/expansion/spec_schema_member_conflicts.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:4:5
  │
4 │     spec schema Foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:11:5
   │
11 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:20:5
   │
20 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:27:5
   │
27 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:30:5
   │  
30 │ ╭     spec module {
31 │ │         fun Foo(): bool { false }
32 │ │     }
   │ ╰─────^ Specification blocks are deprecated and are no longer used
